homework-20-01-24/Aren-Mkrtchyan/vpc.tf
resource "aws_vpc" "terraform_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "var.vpc_name"
  }
}
